assets/theme.css
/* ... */
.product-single__thumbnails.slick-vertical .slick-prev {
  top: -10px;
  transform: rotate(90deg);
  transform: rotate(90deg) !important;
  right: 50%;
  margin-right: -18px;
  left:auto;
}
.product-single__thumbnails.slick-vertical .slick-next {
  top: auto;
  bottom: -12px;
  transform: rotate(90deg) !important;
  right: 50%;
  margin-right: -18px;
}
.js-modal-open-product-modal {
  cursor: zoom-in;
}
.product-tag {
  font-size: var(--g-font-size);
  display: inline-block;
  font-size: var(--g-label-size);
  background-color: var(--g-label-hot);
  color: var(--g-label-text);
  padding: 2px 6px;
  border-radius: 0;
  font-family: var(--g-font-2);
  font-weight: 500;
  line-height: 1;
  letter-spacing:var(--g-label-space);
}
.product-label {
  position: absolute;
  z-index: 10;
  top: var(--g-pos-top-label);
  left: var(--g-pos-left-label);
  line-height: 1;
}
@media (max-width:749px){
  .product-label {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    align-content:flex-start;
  }
}
.product-tag--absolute {
  display: inline-block;
  padding: 6px 8px;
  border-radius: var(--g-radius-label);
  margin-right: 0.5rem;
  min-width:40px;
  text-align:center;
}
.square_label .product-tag--absolute {
  height: 40px;
  width: 40px;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  line-height: 1.2;
}
.pagination {
  display: block;
  text-align: center;
  margin: 40px 40px 0;
}
.pagination .page,
.pagination .next,
.pagination .prev {
  background-color: #f1f1f1;
  margin: 0 2px;
  display: inline-block;
  cursor: pointer;
}
.pagination .page a,
.pagination .next a,
.pagination .prev a {
  min-height: 36px;
  line-height: 36px;
  min-width: 36px;
  text-align: center;
  display: inline-block;
}
.pagination a {
  color: var(--color-body-text);
  padding: 0 10px;
}
.pagination a:hover,
.pagination a:focus {
  color: var(--g-main);
}
.pagination .current {
  color: #fff;
  background-color: var(--g-main);
  min-height: 36px;
  line-height: 36px;
  min-width: 36px;
  text-align: center;
}
.comment {
  margin-bottom: var(--g-gutter);
}
.comment:last-child {
  margin-bottom: 0;
}
.comment + .comment {
  padding-top: var(--g-gutter);
}
.comment .h6 {
  font-weight: 700;
}
.comment .h3 {
  margin-bottom: 30px;
}
.comment .comment__user {
  width: 60px;
  height: 60px;
  background-color: #f1f1f1;
}
.rte--indented-images .rte__image-indent {
  position: relative;
  margin-left: calc(0 - var(--g-gutter));
  margin-right: calc(0 - var(--g-gutter));
}
@media only screen and (min-width: 750px) {
  .rte--indented-images .rte__image-indent {
    margin-left: -40px;
    margin-right: -40px;
  }
}
.is-transitioning {
  display: block !important;
  visibility: visible !important;
}
.page-container {
  overflow: hidden;
  transition: none !important;
}
.js-drawer-open .page-container:after {
  content: "";
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 9998;
  background: rgba(0, 0, 0, 0.7);
}
.js-drawer-open {
  overflow: hidden;
}
.drawer {
  display: block;
  opacity: 0;
  visibility: hidden;
  position: fixed;
  overflow-y: auto;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
  top: 0;
  bottom: 0;
  max-width: 95%;
  z-index: 9999;
  background-color: #fff;
  transition: all 0.35s cubic-bezier(0.33, 0.59, 0.14, 1);
}
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .drawer {
    z-index: 3;
  }
}
.drawer--left {
  width: 400px;
  left: -400px;
}
@media only screen and (max-width: 749px) {
  .drawer--left {
    width: 350px;
    left: -350px;
  }
}
.js-drawer-open-left .drawer--left {
  display: block;
  -ms-transform: translateX(400px);
  -webkit-transform: translateX(400px);
  transform: translateX(400px);
  opacity: 1;
  visibility: visible;
}
@media only screen and (max-width: 749px) {
  .js-drawer-open-left .drawer--left {
    -ms-transform: translateX(350px);
    -webkit-transform: translateX(350px);
    transform: translateX(350px);
  }
}
.no-csstransforms .js-drawer-open-left .drawer--left {
  left: 0;
}
.rtl .no-csstransforms .js-drawer-open-left .drawer--left {
  right: 0;
  left: auto;
}
.drawer--right {
  width: 350px;
  right: -350px;
}
.rtl .drawer--right {
  left: -350px;
  right: auto;
}
.js-drawer-open-right .drawer--right {
  display: block;
  -ms-transform: translateX(-350px);
  -webkit-transform: translateX(-350px);
  transform: translateX(-350px);
  opacity: 1;
  visibility: visible;
}
.no-csstransforms .js-drawer-open-right .drawer--right {
  right: 0;
}
.rtl .no-csstransforms .js-drawer-open-right .drawer--right {
  left: 0;
  right: auto;
}
.is-moved-by-drawer {
  transition: all 0.35s cubic-bezier(0.33, 0.59, 0.14, 1);
}
.no-csstransforms .js-drawer-open-left .is-moved-by-drawer {
  left: 350px;
}
.rtl .no-csstransforms .js-drawer-open-left .is-moved-by-drawer {
  right: 350px;
  left: auto;
}
.no-csstransforms .js-drawer-open-right .is-moved-by-drawer {
  left: -350px;
}
.rtl .no-csstransforms .js-drawer-open-right .is-moved-by-drawer {
  right: -350px;
  left: auto;
}
.page-element {
  position: relative;
}
.overflow-hidden-mobile .page-element {
  z-index: 9999;
}
.page-element.is-transitioning {
  z-index: 2;
}
.js-drawer-open-left .page-element.is-transitioning {
  z-index: 101;
}
.page-container {
  background-color: var(--color-content);
}
.is-moved-by-drawer,
.js-drawer-open .is-moved-by-drawer {
  transition: all 0.35s cubic-bezier(0.33, 0.59, 0.14, 1);
}
.js-drawer-open-left .is-moved-by-drawer {
  box-shadow: #0000001a 0 0 5px;
}
.js-drawer-open-right .is-moved-by-drawer {
  box-shadow: #0000001a 0 0 -5px;
}
.drawer {
  overflow: visible;
  color: #000;
}
.drawer .show {
  opacity: 1 !important;
}
.drawer__inner {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 0 15px;
}
.collection-sort {
  display: inline-block;
  text-align: left;
  max-width: 150px;
}
/* ... */

